--- a/OpenGL_Game/OpenGL_Game/OpenGL_Game.vcxproj
+++ b/OpenGL_Game/OpenGL_Game/OpenGL_Game.vcxproj
@@ -24,10 +24,12 @@
     <ClCompile Include="Diamond.cpp" />
     <ClCompile Include="DirectionalLight.cpp" />
     <ClCompile Include="camera.cpp" />
+    <ClCompile Include="Hitbox.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mat4.cpp" />
     <ClCompile Include="Material.cpp" />
+    <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PointLight.cpp" />
     <ClCompile Include="Rectangle.cpp" />
@@ -40,7 +42,6 @@
     <ClCompile Include="vec2.cpp" />
     <ClCompile Include="vec3.cpp" />
     <ClCompile Include="vec4.cpp" />
-    <ClCompile Include="Vertex.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="camera.h" />
@@ -48,15 +49,16 @@
     <ClInclude Include="CubeMap.h" />
     <ClInclude Include="Diamond.h" />
     <ClInclude Include="DirectionalLight.h" />
+    <ClInclude Include="Hitbox.h" />
     <ClInclude Include="Light.h" />
     <ClInclude Include="Material.h" />
+    <ClInclude Include="Mesh.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="PointLight.h" />
     <ClInclude Include="Rectangle.h" />
     <ClInclude Include="Sphere.h" />
     <ClInclude Include="SpotLight.h" />
     <ClInclude Include="Triangle.h" />
-    <ClInclude Include="Vertex.h" />
     <ClInclude Include="mat4.h" />
     <ClInclude Include="mathdefinitions.h" />
     <ClInclude Include="maths.h" />
